# diseaseMonitor

./: .gitignore  CMakeLists.txt  Makefile  command_lib.c  command_lib.h  data_io.c  data_io.h  hashTable.c  hashTable.h  input.txt  list_lib.c  list_lib.h  main.c  myexe  redBlackTree.c  redBlackTree.h  structs.h  tiny.txt
AnnaAikateriniKavvadaProject1/: Makefile  README
AnnaAikateriniKavvadaProject1/header/: binaryMaxHeap.h  data_io.h  list_lib.h
AnnaAikateriniKavvadaProject1/src/: binaryMaxHeap.c  command_lib.c  data_io.c  hashTable.c  list_lib.c  main.c  redBlackTree.c
header/: binaryMaxHeap.h  command_lib.h  data_io.h  hashTable.h  list_lib.h  redBlackTree.h  structs.h
inputFiles/: large.txt  random.py  small.txt  tiny.txt
src/: binaryMaxHeap.c  command_lib.c  data_io.c  hashTable.c  list_lib.c  main.c  redBlackTree.c
